<resources>
    <string name="error">❌ Error</string>
    <string name="success">✅️ Success</string>
    <string name="warning">⚠️ Warning</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="import_account">Import Account</string>
    <string name="sign_psbt">Sign PSBT</string>
    <string name="input_your_account_map_json">Input your account map json</string>
    <string name="input_your_12_recovery_words">input your 12 recovery words</string>
    <string name="import_failed_please_review_your_12">Import failed, please review your 12 recovery words and try again!</string>
    <string name="fill">FILL</string>
    <string name="sign">SIGN</string>
    <string name="export">EXPORT</string>
    <string name="next">NEXT</string>
    <string name="gordian_signers">Gordian Signers</string>

    <string name="add">Add</string>
    <string name="import_new">Import</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="paste">Paste</string>
    <string name="cancel">Cancel</string>

    <string name="to_get_started_allow_access_camera">To get started, allow Gordian Signer to access your camera.</string>
    <string name="enable_camera_access">Enable Camera Access</string>
    <string name="enable_access">Enable Access</string>
    <string name="scan">Scan</string>
    <string name="signers">Signers</string>
    <string name="fill_account_map">Fill Account Map</string>

    <string name="invalid_account_map">Invalid Account Map</string>
    <string name="invalid_psbt">Invalid PSBT</string>
    <string name="unable_to_sign_psbt_unknown_error">Unable to sign that psbt: unknown error</string>
    <string name="clipboard_is_empty">Clipboard is empty</string>

    <string name="valid_account_map">Valid Account Map ✅</string>
    <string name="you_can_tap_fill_now_to_fill_your_account_map">You can tap the \"fill\" button to accept and fill your account map</string>
    <string name="valid_psbt">Valid PSBT ✅</string>
    <string name="you_can_tap_sign_button_to_sign_your_psbt">You can tap the \"sign\" button to sign your psbt</string>
    <string name="the_psbt_has_been_fully_signed">The PSBT has been fully signed or is unable to sign!</string>
    <string name="psbt_signed">PSBT signed ✅</string>
    <string name="you_may_now_export_it_by_tapping_the_export_button">You may now export it by tapping the \"export\" button"</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="qr_ur_code">QR/UR code</string>
    <string name="save_as_psbt_file">Save as .psbt file</string>
    <string name="add_signer">Add Signer</string>
    <string name="psbt_signer">PSBT Signer</string>

    <string name="add_word_format">add word #%1$d</string>
    <string name="seed_words_encrypted_and_saved">Your account is securely encrypted and saved to local storage 🔐</string>
    <string name="your_account_has_been_saved_to_the_account_book">Your account has been saved to the account book.🔐</string>
    <string name="some_thing_went_wrong_your_seed_words_were_not_saved">Something went wrong, your account has not been not saved!</string>
    <string name="your_input_signer_is_not_matched">Your input signer is not matched with current fingerprint!</string>
    <string name="copied">Copied</string>
    <string name="your_accounts_are_invalidated">Your accounts are invalidated since your device biometric authentication is changed or removed. Please clear the app data then using your 12 recovery words to import again.\n\nStorage &amp; cache->Clear storage</string>
    <string name="auth_required">Authentication is required</string>
    <string name="auth_for_signing">Authenticate for signing PSBT</string>
    <string name="auth_for_updating_account_map">Authenticate for updating Account Map</string>
    <string name="auth_for_getting_your_account_key">Authenticate for getting your account key</string>
    <string name="auth_for_storing_account">Authenticate for securely storing your account</string>
    <string name="auth_for_deleting_account">Authenticate for permanently deleting your account</string>
    <string name="device_authentication_setup_required">Device authentication setup like PIN/Pattern/Password is required</string>
    <string name="no_account_found">No account was found. Using 12 recovery words to import to your wallet.</string>
    <string name="psbt_is_unable_to_sign">PSBT is unable to sign.</string>
    <string name="your_account_does_not_match_with_current_psbt">Your account does not match with current PSBT.</string>
    <string name="no_appropriate_account_found">No appropriate account was found for signing the PSBT.</string>
    <string name="bad_descriptor">Bad descriptor.</string>
    <string name="unsupported_format">Unsupported format.</string>
    <string name="account_map_completed">Account map is already completed.</string>
    <string name="account_map_filled">Account map is already filled.</string>
    <string name="could_not_delete_account">Could not permanently delete your account from local storage due to unexpected problem.</string>
    <string name="could_not_get_your_account">Could not get your account key from local storage due to unexpected problem.</string>
    <string name="fetching_accounts_failed">Fetching accounts from local storage failed.</string>
    <string name="select_a_key">Select a Key</string>
    <string name="result">Result</string>
    <string name="delete_signer">Delete Signer</string>
    <string name="this_action_is_undoable_the_signer_will_be_gone_forever">This action is undoable! The signer will be gone forever.</string>
    <string name="this_action_is_undoable_the_contact_will_be_gone_forever">This action is undoable! The contact will be gone forever.</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="do_you_want_to_delete_the_whole_key">Do you want to delete the whole key or delete the private key only?</string>
    <string name="delete">Delete</string>
    <string name="alias">Alias</string>
    <string name="save_seed">Save Seed?</string>
    <string name="fingerprint_alias_format">%1$s (%2$s)</string>
    <string name="delete_seed">Delete seed</string>
    <string name="signer_format">Signer: %1$s (%2$s)</string>
    <string name="saved_contacts">Saved Contacts</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="contact">Contact</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="save">Save</string>
    <string name="fingerprint_is_not_correct">Fingerprint is not correct!</string>
    <string name="account_map_info">Account Map Info\n- Signers Required: %1$d \n- Total Signers: %2$d \n- Joined Singers: %3$s</string>
    <string name="psbt_info">PSBT Info\n- Participants (Signers): %2$s \n- Signature Count: %1$d</string>
    <string name="animate">Animate</string>
    <string name="no_animate">No Animate</string>
    <string name="percent_completed">%1$d%% completed</string>
    <string name="content_is_invalid_please_check_and_try_again">Content is invalid. Please check and try again!</string>
    <string name="please_input_your_recovery_words">Please input your recovery words!</string>
    <string name="incorrect_words">Incorrect words!</string>

    <string name="confirm_to_sign_psbt">Confirm to Sign PSBT?</string>
    <string name="please_review_your_info_before_signing">"Please review your info before signing. You will sign the PSBT with your key:\n\n 🔑 %1$s (%2$s)"</string>
    <string name="fps">%1$d fps</string>
    <string name="unnamed">Unnamed</string>
    <string name="fingerprint_format">📝 Fingerprint: %1$s</string>
    <string name="last_used_format">⏱️ Last used: %1$s</string>
    <string name="please_write_down_and_save_your_12_recovery_words">Please write down and save your 12 recovery words.\n\nOnce you hit the add signer button, these words will be deleted permanently from your device! ⚠️</string>
    <string name="generated_successfully">Generated successfully</string>
</resources>