<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_fill_account_map"
        android:icon="@drawable/ic_extension_24"
        android:orderInCategory="0"
        android:title="@string/fill_account_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/edit"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_24"
        android:orderInCategory="2"
        android:title="@string/add"
        app:showAsAction="always" />

</menu>