<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tundora">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/copy_to_clipboard"
        app:layout_constraintBottom_toTopOf="@id/tvQRCode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/qr_ur_code"
        app:layout_constraintBottom_toTopOf="@id/tvFile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/save_as_psbt_file"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>